# rotki-sqlite

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
_sqlite/: module.h
rsqlite/: __init__.py  __init__.pyi  dbapi2.py
