# pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsqlite"
version = "0.0.1"
description = "DB-API 2.0 interface for Sqlite 3.x"
# Assumes you have a README.md file for the long description.
# If not, you can remove this line or create the file.
readme = "README.md"
license = { text = "zlib/libpng" }
authors = [
    { name = "Charles Leifer", email = "coleifer@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: zlib/libpng License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/rotki/rsqlite"

# Setuptools-specific configuration
[tool.setuptools]
packages = ["rsqlite"]
