[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotki-sqlite"
requires-python = "==3.11.*"
version = "2025.07.04"
description = "DB-API 2.0 interface for Sqlite 3.x"
readme = "README.md"
license = { text = "zlib/libpng" }
authors = [
    {name = "Rotki Solutions GmbH", email = "info@rotki.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: zlib/libpng License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/rotki/rotki-sqlite"

# Setuptools-specific configuration
[tool.setuptools]
packages = ["rsqlite"]
